fix(stepper): misaligned header on mobile

--- a/packages/elvis/src/components/stepper.scss
+++ b/packages/elvis/src/components/stepper.scss
@@ -102,6 +102,7 @@
         display: flex;
         flex-direction: row;
         gap: 16px;
+        align-items: center;
 
         .e-stepper__step-title {
           display: flex;
